--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 				border: none;
 				border-radius: 4px;
 				cursor: pointer;
+				margin-top: 10px;
 			}
 			button:hover {
 				background-color: #4cae4c;
